Add da página ideias.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,9 @@
     <section id="intro">
 
       <header>
-        <img src="logo.png" alt="Logomarca">
+        <a href="index.html">
+          <img src="logo.png" alt="Logomarca">
+        </a>
       </header>
 
       <main>
@@ -36,12 +38,12 @@
       <section id="buttons">
        
         <button onclick="onOff()">+ Adicionar Ideias</button>
-        <button class="fat">Ver Ideias</button>
+        <button class="fat"> <a href="ideias.html">Ver Ideias</a> </button>
 
       </section>
 
       <footer>
-        Com ❤ <a href="http://rocketseat.com.br">Rocketseat</a>
+        Com ❤ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
       </footer>
     </section>
 
